Make "Send a xxx tip" currency-agnostic so we don't need to re-translate again

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -24,7 +24,6 @@
   "Following --[button label indicating a channel has been followed]--": "Following",
   "The tags you follow will change what's trending for you.": "The tags you follow will change what's trending for you.",
   "Tags": "Tags",
-  "Send a tip": "Send a tip",
   "Share": "Share",
   "Play": "Play",
   "Shuffle Play": "Shuffle Play",
@@ -1024,6 +1023,7 @@
   "Sending": "Sending",
   "From": "From",
   "Only creators that verify cash accounts can receive tips": "Only creators that verify cash accounts can receive tips",
+  "Send a tip directly from your attached card": "Send a tip directly from your attached card",
   "Amount must be at least one dollar": "Amount must be at least one dollar",
   "Update Your Password": "Update Your Password",
   "Your Wallet is Empty": "Your Wallet is Empty",
@@ -1062,8 +1062,7 @@
   "Boost This %claimTypeText%": "Boost This %claimTypeText%",
   "Boost Your %claimTypeText%": "Boost Your %claimTypeText%",
   "Tip This %claimTypeText%": "Tip This %claimTypeText%",
-  "Send a $%displayAmount% Tip": "Send a $%displayAmount% Tip",
-  "Send a %displayAmount% Credit Tip": "Send a %displayAmount% Credit Tip",
+  "Send a %amount% tip": "Send a %amount% tip",
   "Boost": "Boost",
   "Boost transaction successful.": "Boost transaction successful.",
   "Boost transaction failed.": "Boost transaction failed.",
