Option to hide notification count in title bar

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -423,6 +423,7 @@
   "Automatic dark mode": "Automatic dark mode",
   "24-hour clock": "24-hour clock",
   "Hide wallet balance in header": "Hide wallet balance in header",
+  "Hide notification count in title bar": "Hide notification count in title bar",
   "Show All": "Show All",
   "names cannot contain spaces or reserved symbols": "names cannot contain spaces or reserved symbols",
   "Creating channel...": "Creating channel...",
