--- a/.env.defaults
+++ b/.env.defaults
@@ -18,7 +18,7 @@ SOCKETY_SERVER_API=wss://sockety.odysee.com/ws
 RECSYS_ENDPOINT=https://recsys.odysee.tv/v1/lvv
 RECSYS_FYP_ENDPOINT=https://recsys.odysee.tv/v1/u
 #   IMAGE_PROXY_URL=https://boost.vanwanet.com/index.php
-#   THUMBNAIL_CDN_URL=https://thumbnails.odycdn.com/optimize/
+THUMBNAIL_CDN_URL=https://thumbnails.odycdn.com/optimize/
 THUMBNAIL_CARDS_CDN_URL=https://cards.odycdn.com/
 LOCALE_API=https://api.odysee.com/legal/requirements
 THUMBNAIL_HEIGHT=220
