--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2301,5 +2301,10 @@
   "Add to %collection%": "Add to %collection%",
   "Show this channel your appreciation by sending a donation of Credits. ": "Show this channel your appreciation by sending a donation of Credits. ",
   "%action% %collection%": "%action% %collection%",
+  "You've entered the land of content freedom! Let's make sure everything is ship shape.": "You've entered the land of content freedom! Let's make sure everything is ship shape.",
+  "By continuing, you agree to the %terms%": "By continuing, you agree to the %terms%",
+  "Privacy": "Privacy",
+  "LBRY takes privacy and choice seriously. Is it ok if we monitor performance and help creators track their views?": "LBRY takes privacy and choice seriously. Is it ok if we monitor performance and help creators track their views?",
+  "Yes, share with LBRY": "Yes, share with LBRY",
   "--end--": "--end--"
 }
