Fix context for translators

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1022,7 +1022,6 @@
   "Confirm Transaction": "Confirm Transaction",
   "Once the transaction is sent, it cannot be reversed.": "Once the transaction is sent, it cannot be reversed.",
   "Sending": "Sending",
-  "From": "From",
   "Only creators that verify cash accounts can receive tips": "Only creators that verify cash accounts can receive tips",
   "Send a tip directly from your attached card": "Send a tip directly from your attached card",
   "Amount must be at least one dollar": "Amount must be at least one dollar",
@@ -1736,7 +1735,6 @@
   "Enter desired %lbc%": "Enter desired %lbc%",
   "Estimated BTC price": "Estimated BTC price",
   "Start Swap": "Start Swap",
-  "To": "To",
   "Receiving": "Receiving",
   "Send crypto to the address provided and you will be sent an equivalent amount of Credits. You can pay with BCH, LTC, ETH, USDC or DAI after starting the swap.": "Send crypto to the address provided and you will be sent an equivalent amount of Credits. You can pay with BCH, LTC, ETH, USDC or DAI after starting the swap.",
   "Swap Crypto for %lbc%": "Swap Crypto for %lbc%",
@@ -1943,6 +1941,7 @@
   "List is Empty": "List is Empty",
   "Confirm List Unpublish": "Confirm List Unpublish",
   "This will permanently delete the list.": "This will permanently delete the list.",
+  "Type \"%list_name%\" to confirm.": "Type \"%list_name%\" to confirm.",
   "Chat": "Chat",
   "Tipped": "Tipped",
   "Fromage": "Fromage",
@@ -2037,6 +2036,7 @@
   "Outgoing": "Outgoing",
   "Credits --[transactions tab]--": "Credits",
   "USD --[transactions tab]--": "USD",
+  "Currency --[transactions tab]--": "Currency",
   "Receiving Channel Name": "Receiving Channel Name",
   "Tip Location": "Tip Location",
   "Amount (USD)": "Amount (USD)",
