Uploads Page: fix Repost tab when count is 0
## Issue
The page becomes blank without the filter header when Repost is selected + 0 results.

## Change
Grabbed and modified lbry-desktop's 390bb6df

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -782,6 +782,7 @@
   "You haven't uploaded anything yet. This is where you can find them when you do!": "You haven't uploaded anything yet. This is where you can find them when you do!",
   "You haven't uploaded anything with this channel yet!": "You haven't uploaded anything with this channel yet!",
   "You haven't uploaded anything": "You haven't uploaded anything",
+  "You haven't reposted anything yet.": "You haven't reposted anything yet.",
   "Upload something to start tracking your stats!": "Upload something to start tracking your stats!",
   "You haven't created a channel yet, let's fix that!": "You haven't created a channel yet, let's fix that!",
   "Upload Something": "Upload Something",
@@ -1322,6 +1323,7 @@
   "Comment as": "Comment as",
   "Replying as": "Replying as",
   "No uploads": "No uploads",
+  "No Reposts": "No Reposts",
   "uploads": "uploads",
   "Staked LBRY Credits": "Staked LBRY Credits",
   "1 comment": "1 comment",
