Update PWA manifest

--- a/web/static/pwa/manifest.json
+++ b/web/static/pwa/manifest.json
@@ -24,5 +24,11 @@
       "sizes": "180x180"
     }
   ],
-  "prefer_related_applications": false
+  "prefer_related_applications": true,
+  "related_applications": [
+    {
+      "platform": "play",
+      "id": "com.odysee.app"
+    }
+  ]
 }
