fix send tip default

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2306,5 +2306,6 @@
   "Privacy": "Privacy",
   "LBRY takes privacy and choice seriously. Is it ok if we monitor performance and help creators track their views?": "LBRY takes privacy and choice seriously. Is it ok if we monitor performance and help creators track their views?",
   "Yes, share with LBRY": "Yes, share with LBRY",
+  "This refundable boost will improve the discoverability of this %claimTypeText% while active. ": "This refundable boost will improve the discoverability of this %claimTypeText% while active. ",
   "--end--": "--end--"
 }
