--- a/.env.defaults
+++ b/.env.defaults
@@ -22,7 +22,9 @@ THUMBNAIL_CDN_URL=https://thumbnails.odycdn.com/optimize/
 THUMBNAIL_CARDS_CDN_URL=https://cards.odycdn.com/
 LOCALE_API=https://api.odysee.com/legal/requirements
 THUMBNAIL_HEIGHT=220
+THUMBNAIL_HEIGHT_MOBILE=506
 THUMBNAIL_WIDTH=390
+THUMBNAIL_WIDTH_MOBILE=900
 THUMBNAIL_QUALITY=85
 THUMBNAIL_CDN_SIZE_LIMIT_BYTES=5242880
 WELCOME_VERSION=1.0
