page titles fixes + sockety url
sockety

--- a/.env.defaults
+++ b/.env.defaults
@@ -14,7 +14,7 @@ LBRY_WEB_BUFFER_API=https://collector-service.api.lbry.tv/api/v1/events/video
 COMMENT_SERVER_API=https://comments.odysee.tv/api/v2
 SEARCH_SERVER_API_ALT=https://recsys.odysee.tv/search
 SEARCH_SERVER_API=https://lighthouse.odysee.tv/search
-SOCKETY_SERVER_API=wss://sockety.odysee.com/ws
+SOCKETY_SERVER_API=wss://sockety.odysee.tv/ws
 RECSYS_ENDPOINT=https://recsys.odysee.tv/v1/lvv
 RECSYS_FYP_ENDPOINT=https://recsys.odysee.tv/v1/u
 #   IMAGE_PROXY_URL=https://boost.vanwanet.com/index.php
