Re-enable 'Purchases' page
Closes 1284

## Notes
- Re-used the Library page, but disabled the [Downloads | Purchases] tabs.
- Access from Settings > Accounts > Purchases

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -934,6 +934,7 @@
   "Discover Channels": "Discover Channels",
   "Downloads": "Downloads",
   "Purchases": "Purchases",
+  "View your purchased content.": "View your purchased content.",
   "No purchases found.": "No purchases found.",
   "Drop here to publish!": "Drop here to publish!",
   "Trending for %tagName%": "Trending for %tagName%",
