Add "original" quality button

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1672,6 +1672,11 @@
   "Theater Mode (t)": "Theater Mode (t)",
   "Default Mode (t)": "Default Mode (t)",
   "Quality": "Quality",
+  "Auto --[Video quality. Short form]--": "Auto",
+  "Orig (%quality%) --[Video quality popup. Short form.]--": "Orig (%quality%)",
+  "Original (%quality%) --[Video quality popup. Long form.]--": "Original (%quality%)",
+  "Original --[Video quality button. Abbreviate to fit space.]--": "Original",
+  "Original --[Video quality button. Long form.]--": "Original",
   "Autoplay Next On": "Autoplay Next On",
   "Autoplay Next is on.": "Autoplay Next is on.",
   "Autoplay Next Off": "Autoplay Next Off",
