Re-organize env file
No changes to any values, just:
(1) moved things around
(2) removed defunct variables

--- a/.env.defaults
+++ b/.env.defaults
@@ -2,12 +2,12 @@
 
 # Copy this file to .env to make modifications
 
-# Base config
+# --- Base config ---
 WEBPACK_WEB_PORT=9090
 WEBPACK_ELECTRON_PORT=9091
 WEB_SERVER_PORT=1337
 
-## APIS
+# -- APIs ---
 LBRY_WEB_API=https://api.na-backend.odysee.com
 LBRY_WEB_STREAMING_API=https://player.odycdn.com
 LBRY_WEB_BUFFER_API=https://collector-service.api.lbry.tv/api/v1/events/video
@@ -17,6 +17,7 @@ SEARCH_SERVER_API=https://lighthouse.odysee.tv/search
 SOCKETY_SERVER_API=wss://sockety.odysee.tv/ws
 RECSYS_ENDPOINT=https://recsys.odysee.tv/v1/lvv
 RECSYS_FYP_ENDPOINT=https://recsys.odysee.tv/v1/u
+# -Disable boost due to instability:
 #   IMAGE_PROXY_URL=https://boost.vanwanet.com/index.php
 THUMBNAIL_CDN_URL=https://thumbnails.odycdn.com/optimize/
 THUMBNAIL_CARDS_CDN_URL=https://cards.odycdn.com/
@@ -29,19 +30,16 @@ THUMBNAIL_QUALITY=85
 THUMBNAIL_CDN_SIZE_LIMIT_BYTES=5242880
 WELCOME_VERSION=1.0
 
-# STRIPE
+# --- Stripe ---
 # STRIPE_PUBLIC_KEY='pk_test_NoL1JWL7i1ipfhVId5KfDZgo'
 
-# Analytics
-
-# OG
+# --- OG ---
 OG_TITLE_SUFFIX=| odysee.com
 OG_HOMEPAGE_TITLE=Odysee
 OG_IMAGE_URL=https://thumbnails.odycdn.com/optimize/s:1200:630/quality:85/plain/https://spee.ch/odysee-og:e.png
 SITE_CANONICAL_URL=odysee.com
 
-# UI
-## Custom Site info
+# --- UI ---
 DOMAIN=odysee.com
 URL=https://odysee.com
 SITE_TITLE=Odysee
@@ -49,11 +47,21 @@ SITE_NAME=Odysee
 SITE_DESCRIPTION=Explore a whole universe of videos on Odysee from regular people just like you!
 SITE_HELP_EMAIL=help@odysee.com
 LOGO_TITLE=odysee
-## Social media
 TWITTER_ACCOUNT=OdyseeTeam
-BRANDED_SITE=odysee
+LOADING_BAR_COLOR=#e50054
 
-# IMAGE ASSETS
+BRANDED_SITE=odysee
+SIMPLE_SITE=false
+ENABLE_WILD_WEST=true
+CUSTOM_HOMEPAGE=false
+SHOW_ADS=true
+ENABLE_MATURE=false
+ENABLE_UI_NOTIFICATIONS=true
+#SHOW_TAGS_INTRO=false
+
+AUTO_FOLLOW_CHANNELS=lbry://@lbry#3fda836a92faaceedfe398225fb9b2ee2ed1f01a
+
+# --- Image Assets ---
 YRBL_HAPPY_IMG_URL=https://thumbnails.odycdn.com/optimize/s:300:300/quality:85/plain/https://spee.ch/spaceman-happy:a.png
 YRBL_SAD_IMG_URL=https://thumbnails.odycdn.com/optimize/s:300:300/quality:85/plain/https://spee.ch/spaceman-sad:d.png
 LOGIN_IMG_URL=https://thumbnails.odycdn.com/optimize/s:400:507/quality:85/plain/https://player.odycdn.com/speech/odysee-sign-up:d.png
@@ -64,64 +72,29 @@ AVATAR_DEFAULT=https://thumbnails.odycdn.com/optimize/s:160:160/quality:85/plain
 MISSING_THUMB_DEFAULT=https://thumbnails.odycdn.com/optimize/s:390:220/quality:85/plain/https://spee.ch/missing-thumb-png
 FAVICON=https://odysee.com/public/favicon-spaceman.png
 
-# LOCALE
+# --- Locale ---
 DEFAULT_LANGUAGE=en
 
-## CUSTOM SETTINGS
+# --- Custom Settings ---
 #   Additional settings for below are found in ui/constants/settings and are for
 #   preventing user settings from applying to custom sites without overwriting them.
 # UNSYNCED_SETTINGS='theme dark_mode_times automatic_dark_mode_enabled'
 
-## LINKED CONTENT WHITELIST
+# --- Linked Content Whitelist ---
 KNOWN_APP_DOMAINS=open.lbry.com,lbry.tv,lbry.lat,odysee.com
 
-## CUSTOM CONTENT
-# If the following is true, copy custom/homepage.example.js to custom/homepage.js and modify
-CUSTOM_HOMEPAGE=false
-
-# Add channels to auto-follow on first run
-AUTO_FOLLOW_CHANNELS=lbry://@lbry#3fda836a92faaceedfe398225fb9b2ee2ed1f01a
-
-## FEATURES AND LIMITS
-SIMPLE_SITE=false
-#BRANDED_SITE
-
+# --- Features & Limits ---
+CHANNEL_CREATION_LIMIT=5
+CHANNEL_STAKED_LEVEL_VIDEO_COMMENTS=4
 ENABLE_COMMENT_REACTIONS=true
-ENABLE_FILE_REACTIONS=true
 ENABLE_CREATOR_REACTIONS=true
+ENABLE_FILE_REACTIONS=true
 ENABLE_NO_SOURCE_CLAIMS=true
 ENABLE_PREROLL_ADS=true
-CHANNEL_STAKED_LEVEL_VIDEO_COMMENTS=4
-CHANNEL_CREATION_LIMIT=5
-WEB_PUBLISH_SIZE_LIMIT_GB=4
 LIGHTHOUSE_DEFAULT_TYPES=audio,video
+WEB_PUBLISH_SIZE_LIMIT_GB=4
 
-SHOW_ADS=true
-
-## SIMPLE_SITE REPLACEMENTS
-ENABLE_MATURE=false
-ENABLE_UI_NOTIFICATIONS=true
-
-#ENABLE_LINK_TO_APP=true
-#FORCE_ANALYTICS=true
-#ENABLE_ADVANCED_FILTER=true
 #ENABLE_PAID_CONTENT=true
-#USE_FOOTER=true
-#USE_DISCOVER_WHITELIST=false
-ENABLE_WILD_WEST=true
-#FULL_SIDE_LINKS=true
-#SHOW_TAGS_INTRO=false
-
-# SEARCH TYPES
-#VIDEO_ENABLED=true
-#AUDIO_ENABLED=true
-#POSTS_ENABLED=true
-#IMAGES_ENABLED=true
-#FILES_ENABLED=true
-#MODELS_ENABLED=true
-
-BRANDED_SITE=odysee
-LOADING_BAR_COLOR=#e50054
 
 # --- Firebase ---
 FIREBASE_API_KEY=AIzaSyAgc-4QORyglpYZ3qH9E5pDauEDOJXgM3A
