--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Node.js CI
 
 on:
   push:
-    branches: [master]
+    branches: [master,odystyles]
   pull_request:
     branches: [master]
 
