--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: [master,odystyles]
   pull_request:
-    branches: [master]
+    branches: [master,odystyles]
 
 jobs:
   lint:
