--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,6 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - run: corepack enable
       - run: yarn
       - run: yarn lint
 
@@ -32,6 +33,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
+      - run: corepack enable
 
       - uses: maxim-lobanov/setup-xcode@v1
         if: startsWith(runner.os, 'mac')
