doCheckPublishNameAvailability: case-insensitive version
## Issue
??

## Behavioral Changes
- Use `claim_search` instead of `claim_list` to retrieve all all own claims with the same name (case-insensitive).
  - Caveat: annonymous posts will be excluded.
- When a clash occurs, there is a possibility that we have multiple existing entries (e.g. "xxX", "xXx"). Since we don't know which one is best to fall back, I removed the "edit" button for this and replaced with a simpler text

## Code Note
- If not mistaken, the rest of the code still needs `selectMyClaimForUri` to be case-sensitive, so augment the selector to support both through an optional parameter.

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1056,6 +1056,7 @@
   "Edit existing claim instead": "Edit existing claim instead",
   "You already have a claim at %existing_uri%. Publishing will update (overwrite) your existing claim.": "You already have a claim at %existing_uri%. Publishing will update (overwrite) your existing claim.",
   "You already have a pending upload at %existing_uri%.": "You already have a pending upload at %existing_uri%.",
+  "You already have an upload with that name.": "You already have an upload with that name.",
   "Save": "Save",
   "Saved": "Saved",
   "Saving...": "Saving...",
