--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lbry",
-  "version": "0.52.6-alpha.teststyles.3",
+  "version": "0.53.0-alpha.0",
   "description": "A browser for the LBRY network, a digital marketplace controlled by its users.",
   "keywords": [
     "lbry"
