--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2324,5 +2324,8 @@
   "%repost% %publish%": "%repost% %publish%",
   "Failed to view lbry://@MicheL-PDF#7/LaDameAuPain#f, please try again. If this problem persists, visit https://lbry.com/faq/support for support.": "Failed to view lbry://@MicheL-PDF#7/LaDameAuPain#f, please try again. If this problem persists, visit https://lbry.com/faq/support for support.",
   "Go to": "Go to",
+  "* Note that as\n                peer-to-peer software, your IP address and potentially other system information can be sent to other\n                users, though this information is not stored permanently.": "* Note that as\n                peer-to-peer software, your IP address and potentially other system information can be sent to other\n                users, though this information is not stored permanently.",
+  "Persist watch time": "Persist watch time",
+  "Persist the watch time of the videos you have watched.": "Persist the watch time of the videos you have watched.",
   "--end--": "--end--"
 }
