--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2246,5 +2246,17 @@
   "Attach images by pasting or drag-and-drop.": "Attach images by pasting or drag-and-drop.",
   "There was a network error, but the publish may have been completed. Wait a few minutes, then check your Uploads or Wallet page to confirm.": "There was a network error, but the publish may have been completed. Wait a few minutes, then check your Uploads or Wallet page to confirm.",
   "Sports": "Sports",
-  "--end--": "--end--"
+  "--end--": "--end--",
+  "Default Video Quality": "Default Video Quality",
+  "Set a default quality for video playback. If the default choice is not available, the next lowest will be used when playback starts.": "Set a default quality for video playback. If the default choice is not available, the next lowest will be used when playback starts.",
+  "Auto": "Auto",
+  "Original": "Original",
+  "144p": "144p",
+  "240p": "240p",
+  "360p": "360p",
+  "480p": "480p",
+  "720p": "720p",
+  "1080p": "1080p",
+  "Enable default quality setting": "Enable default quality setting",
+  "Auto (%quality%) --[Video quality popup. Long form.]--": "Auto (%quality%)"
 }
