--- a/package.json
+++ b/package.json
@@ -251,6 +251,9 @@
     "node": ">=7",
     "yarn": "^1.3"
   },
+  "resolutions": {
+    "@videojs/http-streaming": "2.14.2"
+  },
   "lbrySettings": {
     "lbrynetDaemonVersion": "0.99.0",
     "lbrynetDaemonUrlTemplate": "https://github.com/lbryio/lbry/releases/download/vDAEMONVER/lbrynet-OSNAME.zip",
