Add persistent watch time setting. (#7547)
* Add persistent watch time setting.

* floating bugfix --jessopb

* Improve how the persist watch time is being stored; add clear cache button.

* Add makeSelectContentWatchedPercentageForUri selector and give feedback when clearing cache.

* tweaks --jessopb

Co-authored-by: zeppi <jessopb@gmail.com>

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2300,7 +2300,6 @@
   "In %collection%": "In %collection%",
   "Add to %collection%": "Add to %collection%",
   "Show this channel your appreciation by sending a donation of Credits. ": "Show this channel your appreciation by sending a donation of Credits. ",
-  "%action% %collection%": "%action% %collection%",
   "You've entered the land of content freedom! Let's make sure everything is ship shape.": "You've entered the land of content freedom! Let's make sure everything is ship shape.",
   "By continuing, you agree to the %terms%": "By continuing, you agree to the %terms%",
   "Privacy": "Privacy",
@@ -2308,21 +2307,13 @@
   "Yes, share with LBRY": "Yes, share with LBRY",
   "Search Uploads": "Search Uploads",
   "This refundable boost will improve the discoverability of this %claimTypeText% while active. ": "This refundable boost will improve the discoverability of this %claimTypeText% while active. ",
-  "%repost_channel_link%": "%repost_channel_link%",
   "Show less": "Show less",
-  "Channel \"realporno\" blocked.": "Channel \"realporno\" blocked.",
   "Elements": "Elements",
   "Icons": "Icons",
-  "You followed @MinutePhysics!": "You followed @MinutePhysics!",
-  "Unfollowed @samtime.": "Unfollowed @samtime.",
-  "You followed @samtime!": "You followed @samtime!",
-  "Unfollowed @gatogalactico.": "Unfollowed @gatogalactico.",
-  "You followed @gatogalactico!": "You followed @gatogalactico!",
-  "Unfollowed @Odysee.": "Unfollowed @Odysee.",
-  "Unfollowed @rossmanngroup.": "Unfollowed @rossmanngroup.",
-  "You followed @rossmanngroup!": "You followed @rossmanngroup!",
-  "%repost% %publish%": "%repost% %publish%",
-  "Failed to view lbry://@MicheL-PDF#7/LaDameAuPain#f, please try again. If this problem persists, visit https://lbry.com/faq/support for support.": "Failed to view lbry://@MicheL-PDF#7/LaDameAuPain#f, please try again. If this problem persists, visit https://lbry.com/faq/support for support.",
   "Go to": "Go to",
+  "Clearing...": "Clearing...",
+  "Clear Views": "Clear Views",
+  "Show Video View Progress": "Show Video View Progress",
+  "Display view progress on thumbnail. This setting will not hide any blockchain activity or downloads.": "Display view progress on thumbnail. This setting will not hide any blockchain activity or downloads.",
   "--end--": "--end--"
 }
