--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1673,7 +1673,7 @@
   "Quality": "Quality",
   "Auto": "Auto",
   "Auto --[Video quality. Short form]--": "Auto",
-  "Auto %quality% --[Video quality popup. Long form.]--": "Auto (%quality%)",
+  "Auto %quality% --[Video quality popup. Long form.]--": "Auto %quality%",
   "Orig (%quality%) --[Video quality popup. Short form.]--": "Orig (%quality%)",
   "Original (%quality%) --[Video quality popup. Long form.]--": "Original (%quality%)",
   "Original --[Video quality button. Abbreviate to fit space.]--": "Original",
