--- a/.env.defaults
+++ b/.env.defaults
@@ -26,15 +26,15 @@ MATOMO_URL=https://analytics.lbry.com/
 MATOMO_ID=4
 
 # OG
-OG_TITLE_SUFFIX=| lbry.com
-OG_HOMEPAGE_TITLE=lbry.com
+OG_TITLE_SUFFIX=| lbry.tv
+OG_HOMEPAGE_TITLE=lbry.tv
 OG_IMAGE_URL=
-SITE_CANONICAL_URL=https://lbry.com
+SITE_CANONICAL_URL=https://lbry.tv
 
 # UI
 ## Custom Site info
-DOMAIN=lbry.com
-URL=https://lbry.com
+DOMAIN=lbry.tv
+URL=https://lbry.tv
 SITE_TITLE=LBRY
 SITE_NAME=LBRY
 SITE_DESCRIPTION=Meet LBRY, an open, free, and community-controlled content wonderland.
