Add 'Lifestyle' string

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1265,6 +1265,7 @@
   "Game": "Game",
   "Gaming": "Gaming",
   "Lab": "Lab",
+  "Lifestyle": "Lifestyle",
   "Movies": "Movies",
   "Music": "Music",
   "News & Politics": "News & Politics",
