Video-quality string cleanup
- Prevent resolution strings from appearing in `new_strings`.
- Removed unused strings.
- Added missing ones.

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1271,6 +1271,7 @@
   "News & Politics": "News & Politics",
   "News": "News",
   "Pop Culture": "Pop Culture",
+  "Sports": "Sports",
   "Tech": "Tech",
   "Technology": "Technology",
   "The Arts": "The Arts",
@@ -1679,6 +1680,11 @@
   "Original (%quality%) --[Video quality popup. Long form.]--": "Original (%quality%)",
   "Original --[Video quality button. Abbreviate to fit space.]--": "Original",
   "Original --[Video quality button. Long form.]--": "Original",
+  "Original": "Original",
+  "Disabled": "Disabled",
+  "Default Video Quality": "Default Video Quality",
+  "Set a default quality for video playback. If the default choice is not available, the next lowest will be used when playback starts.": "Set a default quality for video playback. If the default choice is not available, the next lowest will be used when playback starts.",
+  "You can also change your default quality on settings.": "You can also change your default quality on settings.",
   "Autoplay Next On": "Autoplay Next On",
   "Autoplay Next is on.": "Autoplay Next is on.",
   "Autoplay Next Off": "Autoplay Next Off",
@@ -2248,10 +2254,5 @@
   "This account has livestreaming disabled, please reach out to hello@odysee.com for assistance.": "This account has livestreaming disabled, please reach out to hello@odysee.com for assistance.",
   "Attach images by pasting or drag-and-drop.": "Attach images by pasting or drag-and-drop.",
   "There was a network error, but the publish may have been completed. Wait a few minutes, then check your Uploads or Wallet page to confirm.": "There was a network error, but the publish may have been completed. Wait a few minutes, then check your Uploads or Wallet page to confirm.",
-  "Sports": "Sports",
-  "Default Video Quality": "Default Video Quality",
-  "Set a default quality for video playback. If the default choice is not available, the next lowest will be used when playback starts.": "Set a default quality for video playback. If the default choice is not available, the next lowest will be used when playback starts.",
-  "Original": "Original",
-  "Enable default quality setting": "Enable default quality setting",
   "--end--": "--end--"
 }
