--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1673,6 +1673,7 @@
   "Exit Fullscreen (f)": "Exit Fullscreen (f)",
   "Theater Mode (t)": "Theater Mode (t)",
   "Default Mode (t)": "Default Mode (t)",
+  "Chapters": "Chapters",
   "Quality": "Quality",
   "Auto": "Auto",
   "Auto --[Video quality. Short form]--": "Auto",
