Batch-resolve Watch History
## Issue
Doing individual resolves, even on a small list, is taxing.

## Change
Add infinite scroll and batch-resolve each page.

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2263,5 +2263,8 @@
   "Unable to react. Please try again later.": "Unable to react. Please try again later.",
   "Username (cannot be changed)": "Username (cannot be changed)",
   "Display Name": "Display Name",
+  "Watch History": "Watch History",
+  "Currently, your watch history is only saved locally.": "Currently, your watch history is only saved locally.",
+  "Clear History": "Clear History",
   "--end--": "--end--"
 }
