Active channel strings

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1492,6 +1492,7 @@
   "View Master L1: N00b": "View Master L1: N00b",
   "Level up with LBRY - %version%": "Level up with LBRY - %version%",
   "Invites": "Invites",
+  "Change Default Channel": "Change Default Channel",
   "This comment was slimed to death.": "This comment was slimed to death.",
   "Reddit": "Reddit",
   "Chat (Discord)": "Chat (Discord)",
@@ -2253,6 +2254,7 @@
   "Canceled On": "Canceled On",
   "Still Valid Until": "Still Valid Until",
   "Active channel": "Active channel",
+  "Select your default active channel": "Select your default active channel",
   "This account has livestreaming disabled, please reach out to hello@odysee.com for assistance.": "This account has livestreaming disabled, please reach out to hello@odysee.com for assistance.",
   "Attach images by pasting or drag-and-drop.": "Attach images by pasting or drag-and-drop.",
   "There was a network error, but the publish may have been completed. Wait a few minutes, then check your Uploads or Wallet page to confirm.": "There was a network error, but the publish may have been completed. Wait a few minutes, then check your Uploads or Wallet page to confirm.",
