Fix remaining untranslated ctrls
Ticket: 1507

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1676,6 +1676,7 @@
   "Default Mode (t)": "Default Mode (t)",
   "Chapters": "Chapters",
   "Quality": "Quality",
+  "Open Chromecast menu": "Open Chromecast menu",
   "Auto": "Auto",
   "Auto --[Video quality. Short form]--": "Auto",
   "Auto %quality% --[Video quality popup. Long form.]--": "Auto %quality%",
