Add "What's New" button in the Help Page
This allows user to re-access the modal if they accidentally dismissed it, never got it (bug?), or simply just want to see it again.

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2259,6 +2259,8 @@
   "Still Valid Until": "Still Valid Until",
   "Active channel": "Active channel",
   "Select your default active channel": "Select your default active channel",
+  "What's New": "What's New",
+  "See what are the latest features and changes in Odysee.": "See what are the latest features and changes in Odysee.",
   "This account has livestreaming disabled, please reach out to hello@odysee.com for assistance.": "This account has livestreaming disabled, please reach out to hello@odysee.com for assistance.",
   "Attach images by pasting or drag-and-drop.": "Attach images by pasting or drag-and-drop.",
   "There was a network error, but the publish may have been completed. Wait a few minutes, then check your Uploads or Wallet page to confirm.": "There was a network error, but the publish may have been completed. Wait a few minutes, then check your Uploads or Wallet page to confirm.",
