--- a/.env.defaults
+++ b/.env.defaults
@@ -9,6 +9,8 @@ WEB_SERVER_PORT=1337
 
 # -- APIs ---
 LBRY_WEB_API=https://api.na-backend.odysee.com
+LBRY_WEB_PUBLISH_API=https://publish.na-backend.odysee.com/v1
+LBRY_WEB_PUBLISH_API_V2=https://publish.na-backend.odysee.com/api/v2/publish/
 LBRY_WEB_BUFFER_API=https://collector-service.api.lbry.tv/api/v1/events/video
 COMMENT_SERVER_API=https://comments.odysee.tv/api/v2
 SEARCH_SERVER_API_ALT=https://recsys.odysee.tv/search
