'Show less livestreams' -> 'Show fewer livestreams'
https://discord.com/channels/721806979928162404/936318782085935155/977673908222320670

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2081,7 +2081,7 @@
   "[Removed]": "[Removed]",
   "lbry.tv has been retired. You have been magically transported to Odysee.com. %more%": "lbry.tv has been retired. You have been magically transported to Odysee.com. %more%",
   "Show more livestreams": "Show more livestreams",
-  "Show less livestreams": "Show less livestreams",
+  "Show fewer livestreams": "Show fewer livestreams",
   "Winning Search for %matching_term%": "Winning Search for %matching_term%",
   "%group_name% matching %matching_term%": "%group_name% matching %matching_term%",
   "Searching...": "Searching...",
