--- a/.flowconfig
+++ b/.flowconfig
@@ -15,6 +15,7 @@
 [options]
 suppress_comment=\\(.\\|\n\\)*\\$FlowFixMe
 suppress_comment=\\(.\\|\n\\)*\\$FlowIssue
+suppress_comment=\\(.\\|\n\\)*\\$FlowIgnore
 module.name_mapper='^constants\(.*\)$' -> '<PROJECT_ROOT>/ui/constants\1'
 module.name_mapper='^contexts\(.*\)$' -> '<PROJECT_ROOT>/ui/contexts\1'
 module.name_mapper='^util\(.*\)$' -> '<PROJECT_ROOT>/ui/util\1'
