Homepage: add "reset" + 'hideByDefault' categories
Requires a related commit from the homepages repo.

## Changes
- Add ability to reset the sort order.
- Make 'News' and 'Wild West' a "hideByDefault" category. It can be made visible in the homepage from the customization dialog.

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -2275,5 +2275,7 @@
   "Watch History": "Watch History",
   "Currently, your watch history is only saved locally.": "Currently, your watch history is only saved locally.",
   "Clear History": "Clear History",
+  "Reset homepage to defaults?": "Reset homepage to defaults?",
+  "Homepage restored to default.": "Homepage restored to default.",
   "--end--": "--end--"
 }
