--- a/.eslintrc
+++ b/.eslintrc
@@ -2,6 +2,9 @@
   "parser": "babel-eslint",
   "extends": ["standard", "standard-jsx", "plugin:react/recommended", "plugin:flowtype/recommended"],
   "plugins": ["flowtype", "import", "react-hooks"],
+  "parserOptions": {
+    "ecmaVersion": 2020
+  },
   "env": {
     "browser": true,
     "node": true
