Tweak tip/boost toast message
- Split the friendly text (non-essential) to `subMessage`.
- Put a link to the wallet history for all these tipping toasts.
- Don't say "tip" for the Wallet Send action (Issue_1605)
- Make the link font-size smaller than the main text.

--- a/static/app-strings.json
+++ b/static/app-strings.json
@@ -1072,7 +1072,9 @@
   "Boost": "Boost",
   "Boost transaction successful.": "Boost transaction successful.",
   "Boost transaction failed.": "Boost transaction failed.",
-  "Tip successfully sent. I'm sure they appreciate it!": "Tip successfully sent. I'm sure they appreciate it!",
+  "Credits successfully sent.": "Credits successfully sent.",
+  "Tip successfully sent.": "Tip successfully sent.",
+  "I'm sure they appreciate it!": "I'm sure they appreciate it!",
   "Tip transaction failed.": "Tip transaction failed.",
   "Add a Card": "Add a Card",
   "To Tip Creators": "To Tip Creators",
